<resources>
    <string name="app_name" translatable="false">Radio Player</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Radio and music player</string>
    <string name="nav_header_subtitle" translatable="false">v 1.0.1</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reload_radio_stations">Reload</string>
    <string name="popular_radio_stations">Popular radio stations</string>
    <string name="search_stations">Search</string>
    <string name="favorite_stations">Favorite stations</string>
    <string name="search">Search</string>
    <string name="search_radio_stations">Search radio stations</string>
    <string name="choose_theme">Choose theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="permission_dialog_text">To listen to music from memory, you must allow access to the repository.
    </string>
    <string name="version" translatable="false">v 1.0.1</string>
    <string name="vmp_version" translatable="false">v 1.0.1</string>
    <string name="nav_contact">Contact</string>
    <string name="tab_all_songs">All Songs</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_radio">Radio</string>
    <string name="exit_string">Click one more time for exit</string>
    <string name="restart_app">Restart the application</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="cannot_load_radio_list">Cannot load radio playlist</string>
    <string name="cannot_load_palylist">Cannot load playlist</string>
    <string name="added_in_playlist">Added in playlist</string>
    <string name="error_add">Error</string>
    <string name="deleted_from_playlist">Deleted from playlist</string>
    <string name="cannot_load_stations">Cannot load stations.
        Something went wrong.</string>
    <string name="cannot_load_stations_internet">Cannot load stations.
        Please, check network connection.</string>
    <string name="check_network">Check network connection</string>
    <string name="nothing_found">Noting found</string>
    <string name="edit">Edit playlist</string>
    <string name="countries">All countries</string>
    <string name="feedback">Feedback Ramp</string>
    <string name="duration">Duration:</string>
    <string name="add_in_playlist">Add in playlist</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="size">Bitrate:</string>
    <string name="album">Album:</string>
    <string name="title">Title:</string>
    <string name="artist">Artist:</string>
    <string name="kbps">kbps</string>
</resources>