<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom" android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_headset"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView"
            android:gravity="start"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_image" android:textStyle="bold"
            android:textAllCaps="false"/>

    <TextView
            android:text="@string/vmp_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="@+id/textView" android:textAllCaps="true"/>

</android.support.constraint.ConstraintLayout>
