<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable name="trackInfo" type="com.kuzheevadel.vmplayerv2.model.TrackInfo"/>
    </data>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="?attr/dividerColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">

        <ImageView
                android:layout_width="101dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/album_art_default"
                android:id="@+id/imageView3"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

        <TextView
                android:text="@string/artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/secondaryTextColor"
                android:id="@+id/textView7"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@+id/textView15"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"/>

        <TextView
                android:text="@string/size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/textView17"
                app:layout_constraintBottom_toBottomOf="@+id/textView17"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout3"
                android:paddingBottom="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="?attr/playlistAddAnimatable"
                    android:id="@+id/imageView4"
                    android:layout_weight="1"/>

            <TextView
                    android:text="@string/add_in_playlist"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/primaryTextColor"
                    android:id="@+id/textView12"
                    android:layout_weight="10"/>

        </LinearLayout>

        <TextView
                android:text="@string/duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@+id/textView18"
                app:layout_constraintBottom_toBottomOf="@+id/textView18"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@{trackInfo.artist}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:textColor="?attr/primaryTextColor"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintBottom_toTopOf="@+id/textView15"/>

        <TextView
                android:text="@{trackInfo.title}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:textColor="?attr/primaryTextColor"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintBottom_toTopOf="@+id/textView16"/>

        <TextView
                android:text="@{trackInfo.album}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:textColor="?attr/primaryTextColor"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"/>

        <TextView
                android:text="@{trackInfo.size}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                android:textColor="?attr/primaryTextColor"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView16"/>

        <TextView
                android:text="@{trackInfo.duration}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:textColor="?attr/primaryTextColor"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView17"/>

    </android.support.constraint.ConstraintLayout>

</layout>
